--- a/_posts/2023-05-05-2.md
+++ b/_posts/2023-05-05-2.md
@@ -1,124 +1,112 @@
 ---
-title: 실시간 채팅 서비스의 안 읽은 메시지 로직
+title: Asnity 프로젝트 개요
 tags: [project]
 author: sooman
 toc: true
 ---
 
-안 읽은 메시지가 있다고 알려주는 것은 실시간 채팅 서비스를 개발하는 데 있어 기술적인 도전이었다.
+## 소개
+### 네이버 부스트캠프 7기 프로젝트로 진행한 6주간의 짧은 프로젝트이다.
 
-우리 서비스의 사용자는 자신의 안 읽은 메시지가 어느 커뮤니티, 채널에 있는지 알 수 있고 어디서부터 읽지 않았는지 알 수 있다. 이 기능을 구현하기 위해 어떤 고민 과정이 있었는지 얘기해 보려고 한다.
+첫 웹 프로젝트로, 짧은 기간안에 기획, 개발, 배포까지 모두 경험할 수 있었다.
 
+[Team Notion](https://www.notion.so/Asnity-cbd4dcce58f540b4b5b7ff33c8cea984)
 
-![](https://velog.velcdn.com/images/soomanbaek/post/d5fb5105-2d32-49d2-be14-96ededb381e9/image.gif)
+[Github](https://github.com/boostcampwm-2022/web24-Asnity)
 
+[배포 사이트](https://asnity.site/)
 
-![](https://velog.velcdn.com/images/soomanbaek/post/523fd13b-002d-4203-a995-7bc112222ac6/image.gif)
+[시연 영상](https://www.youtube.com/watch?v=2gI3OlJXAZQ)
 
-
-### 서비스의 메시지 저장 방식
-
-메시지 저장에 사용되는 DB는 MongoDB를 활용하였다.
-
-> 🤔 **왜 메시지를 MongoDB에 저장하는가요?**
->
->
-> 다음과 같은 장점이 있어 MongoDB를 메시지 저장에 사용하게 되었다.
->
-> 1. 스키마 변경에 있어 유연하다.
->
->     메시지를 저장할 때 넣는 정보를 추가할 때 용이하다.
->
-> 2. 확장성에 좋다.
->
->     메시지를 작성할 때마다 DB에 데이터를 저장하므로 용량이 많아질 것으로 예상하였다. 그래서 확장성이 좋은 MongoDB를 사용하게 되었다.
->
-
-안 읽은 메시지를 저장하기 위해 어떤 정보를 DB에 저장하는지 설명하겠다.
-
-- Chat의 `createdAt` (메시지 생성 시간)
-    - 메시지 생성 시간과 비교하여 안 읽은 메시지의 위치를 알 수 있다.
-- User의 `lastRead` (채널 마지막 방문 시간)
-    - 사용자마다 자기가 속한 채널의 마지막 방문 시간 정보를 가지고 있다.
-
-  ![](https://velog.velcdn.com/images/soomanbaek/post/785006db-f10a-4100-8c9d-9c767eda396a/image.png)
+팀 구성은 FE 2명, BE 2명으로 이루어졌고 팀원 전부 서울권에 가까워서 역삼역에 공유 오피스를 빌려 오프라인으로 만나서 진행할 수 있었다.
 
 
 
-그러면 이제 안 읽은 메시지 위치를 찾는 로직에 대해 설명하겠다.
 
-## 💬  안 읽은 메시지 위치 찾는 로직 (개선 전)
+## 📝 기획
 
-안 읽은 메시지를 찾는 로직은 복잡하지 않다. **메시지의 생성 시간과 채널의 마지막 방문 시간을 비교**하는 것이다.
+### 1. `주제` 정하기..!
 
-안 읽은 메시지 로직은 다음과 같은 사용자 스토리로 나누어진다.
+주제는 엄청 빨리 정해졌다. (기간이 짧다보니 빨리빨리 하게되었다.) 팀원들 각자 어떤 프로젝트를 하고 싶은지 생각해왔고 어떤게 좋은지 투표로 결정했다. 주제로 Slack, Discord와 비슷한 실시간 채팅 서비스를 개발하기로 결정했다. 그리고 기술적인 도전으로 안 읽은 채팅에 대한 알림을 구현하기로 했다.
 
-### 1. 서비스에 접속했을 때 커뮤니티, 채널에 안 읽은 메시지가 있는지 알 수 있다.
+### 2. 주제를 정했으면 이제는 기능..! (`백로그` 작성)
 
-<img src="https://velog.velcdn.com/images/soomanbaek/post/05fbd3cc-2af4-4920-b5fb-fbd248bd0db4/image.png" width=300>
-
-
-사용자가 서비스에 접속했을 때, 사용자가 속한 커뮤니티, 채널에 안 읽은 메시지가 있는지 알려준다. 이때 **각 채널의 마지막 메시지의 생성 시간만 채널의 마지막 방문 시간하고 비교**해주면 된다.
-`사용자가 참여한 채널의 개수가 K 개라고 하면, 총 K 번의 탐색이 발생한다.`
-
-### 2. 채널에 접속했을 때 어디서부터 읽지 않았는지 알 수 있다.
-
-![](https://velog.velcdn.com/images/soomanbaek/post/5b14a33c-20a2-4151-be6d-9481eb2a6f4f/image.png)
+사용자가 어떤 행위를 할 수 있는지를 기준으로 백로그를 작성하였다.
+![](https://velog.velcdn.com/images/soomanbaek/post/ce8e6b00-8ba5-4267-9ce8-ccdc6ffae054/image.png)
 
 
-채널에 접속했을 때는 어디서부터 읽지 않은 메시지가 있는지 알려면 최신 메시지부터 읽은 메시지가 나올 때까지 순차적으로 메시지 생성 시간과 채널의 마지막 방문 시간을 비교하면 된다.
-
-`읽지 않은 메시지가 M 개 있다고 하면, 채널에 방문했을 때 총 M 번의 탐색이 발생한다.`
-
-이렇게 순차적으로 전부 비교하는 방식은 비효율적이다. 그리고 자주 사용되는 API여서 성능상 개선하면 시스템 전체적으로 성능이 올라갈 것으로 생각하여 효율적인 방식을 찾기 위해 고민을 하였다.
-
-## 💬  안 읽은 메시지 찾는 로직 개선 (M → M/100 + M%100)
-
-### **메시지를 100개씩 ChatList에 저장한다.**
-
-<img src="https://velog.velcdn.com/images/soomanbaek/post/e3d12c77-92fd-4c0b-8061-c4a484451568/image.png" width=200>
 
 
-메시지 100개를 하나의 ChatList로 저장하고 FirstChatTime과 사용자의 채널 마지막 방문 시간을 비교한다.
+그 후, 중요도와 우선순위를 추가하여 작업의 순서를 알 수 있게 하였다.
+![](https://velog.velcdn.com/images/soomanbaek/post/5677fed1-8872-4de3-9a88-ad644e01258c/image.png)
 
-채널 마지막 방문 시간이 FirstChatTime보다 최신이면, 해당 ChatList 안에 안 읽은 메시지가 있다는 것이다.
 
-이렇게 구현하면 탐색 횟수가, $`M`$ 번 에서 $`{M}/{100} + {M} \% {100}`$ 번으로 단축된다.
 
-> **예를 들어, 읽지 않은 메시지 개수 M을 1530이라고 가정하고 계산해 보자.**
->
-> 1. 채널의 마지막 방문 시간과 FirstChatTime 비교 (채널의 마지막 방문 시간 < FirstChatTime ⇒ 다음번째 chatList에 존재) 15번 반복 [탐색 횟수: 15]
-> 2. 채널의 마지막 방문 시간과 FirstChatTime 비교 (채널의 마지막 방문 시간 > FirstChatTime ⇒ 이번 chatList에 존재) [탐색 횟수: 1]
-> 3. 내부에서 메시지 탐색 [탐색 횟수: 30]
->
-> 이렇게 구현하면, 1530번 탐색할 것을 46번에 할 수 있다.
->
+백로그와 더불어 어떤 작업을 할 것인지 테스크를 추가로 작성하였다. 이렇게 작성하니 서로 어떤 것을 하고 있는지 한 눈에 볼 수 있었다.
 
-여기서 더 개선할 수 있는 방법에 대해 생각해 보았다. 메시지의 생성 시간이 오름차순으로 저장되기에 이진 탐색을 활용하기로 하였다.
+![](https://velog.velcdn.com/images/soomanbaek/post/066d051f-9ae0-4626-8726-ee366ed3a059/image.png)
 
-## 💬  안 읽은 메시지 찾는 로직 개선 (M/100 + M%100 → M/100 + 6)
 
-### 이진 탐색을 적용해 보자!
 
-읽지 않은 첫 번째 메시지의 위치가 있는 ChatList를 찾았으면, ChatList 안의 메시지 100개를 전부 확인한다.
+### 3. 어떤 기능이 있는지 알겠어. 그러면 `UI`를 작성해야겠지..!
 
-이 부분을 이진 탐색을 활용하면, 최대 6번($log_2(100) ≈ 6$)의 탐색을 거쳐 안 읽은 메시지 위치를 찾을 수 있다. 그러면 탐색 횟수는 $`M/100 + 100`$은 $`M/100 + 6`$ 으로 줄어든다.
+**Figma**를 활용하여 다음과 같이 디자인하였다. 자세한 것은 아래 링크에서 확인할 수 있다.
 
-**100 → 6** 으로 줄어드는 것이 그렇게 효율적일까 생각을 할 수 있다. 하지만 실시간 채팅 서비스 특성상 위 로직은 자주 발생할 것이어서 이 정도 개선도 효과적이라고 생각했다.
+[https://www.figma.com/file/rMLRLD7pVWItjgqOIq5tga/Asnity-Design](https://www.figma.com/file/rMLRLD7pVWItjgqOIq5tga/Asnity-Design)
 
-> 🧑‍🔬 **예를 들어, 읽지 않은 메시지 개수 M을 1530이라고 가정하고 계산해보자.**
->
-> 1. 채널의 마지막 방문 시간과 FirstChatTime 비교 (채널의 마지막 방문 시간 < FirstChatTime ⇒ 다음번째 chatList에 존재) 15번 반복 [탐색 횟수: 15]
-> 2. 채널의 마지막 방문 시간과 FirstChatTime 비교 (채널의 마지막 방문 시간 > FirstChatTime ⇒ 이번 chatList에 존재) [탐색 횟수: 1]
-> 3. 내부에서 메시지 탐색 [탐색 횟수: 6]
->
-> 이렇게 구현하면, 1530번 탐색할 것을 22번에 할 수 있다.
->
+![](https://velog.velcdn.com/images/soomanbaek/post/522d5884-0876-4a15-86a8-6246a958c8ba/image.png)
 
-> **🤔 그러면 chatList도 순차적으로 찾는 것이 아니라 이진 탐색을 사용하면 되지 않을까?**
->
->
-> chatList를 사용하지 않고 메시지를 전부 이진 탐색으로 찾을 경우, $`O(log(M))`$ 의 시간 복잡도로 찾을 수 있다.
->
-> 필자도 처음에 이렇게 생각을 하였으나, 서비스 특성상 안 읽은 메시지가 최신 메시지와 가까이 있을 가능성이 높아 chatList는 최신 메시지부터 뒤로 순차적으로 탐색하도록 구현하였다.
->
+
+### 4. 팀 프로젝트의 규칙은..? **`Ground Rule`**
+
+우리팀의 [그라운드 룰](https://www.notion.so/Team-Rule-449c5c709b594bc7ae8d9c4356aab2b9)은 여기에 있다.
+
+가장 도움이 되었던 그라운드 룰은 데일리 스크럼 작성이다.
+
+일과를 시작하기 전에 서로 어떤 것을 했고 어떤 것을 할지 작성하였다. 예시는 [여기](https://www.notion.so/11-22-825bdf857bef4320929aef4880fc4385) 에 있다.
+
+**데일리 스크럼**을 진행하면서 다음과 같은 장점이 있어 이번 프로젝트에서 가장 잘한 일 중 하나라고 생각한다.
+
+- FE, BE 서로 개발 어느정도 진행되었는지 또 오늘 어떤 작업을 할 건지를 팀원 모두 어느정도 인지하고 있는 것은 소통하는데 중요하다.
+- 오후 10시 30분에 퇴근하기 전 5F 회고를 하였는데 서로 어떤 것을 했고 또 어디서 힘들어 하고 있는지 알 수 있었고 서로 도움을 줄 수 있었다.
+
+또 **매주 KPT 회고**도 진행하였는데 한 주를 돌아보며 어떤 부분을 계속 이어갈지(Keep), 어떤 문제가 발생했는지(Problem), 어떤 노력을 할 것인지(Try) 를 서로 얘기를 나누는 시간도 가졌다.
+
+### 5. Github를 사용할건데 `Branch 전략`은 어떻게..?
+
+다음과 같은 Branch 전략을 택했다.
+
+![](https://velog.velcdn.com/images/soomanbaek/post/32c29896-be2f-418b-b172-e3b8f5c82996/image.png)
+
+
+
+
+`main(master)` branch에 병합되면 `배포 서버`로 자동 배포되도록 하였.
+`dev`, `FE/BE` branch로 병합되면 `개발 서버`로 자동 배포되도록 하였다. CI/CD 툴로는 Github Action을 활용하였다.
+
+### 6. 이제 개발을 바로 앞뒀는데 코드를 짜기전에 `Convnetion`을 정해야 겠지..?
+
+Coding Convention과 Commit Convention을 다음과 같이 정했다.
+
+- [Coding Convention](https://www.notion.so/Coding-convention-615e7761c95f4685aa64c001abe20e36)
+- [Commit Convention](https://www.notion.so/Github-commit-convention-ca029b9c51ff4ea794f17dcf38505a6e)
+
+## 🧑‍💻 개발하기에 앞서
+
+### 1. FrameWork는 어떤걸로..?
+
+JavaScript를 활용하여 개발하기로 하여 활용할 수 있는 프레임워크로 Express, koa, NestJS 등이 있었다.
+
+Express는 많은 자료가 있다는 장점이 있어 사용을 고려하였다. 하지만 프로젝트를 하기 전에 진행했던 학습 스프린트(8주) 동안 사용하면서 구조가 달라 코드 리뷰할 때 구조를 먼저 파악해야하는 불편함이 존재하였다. 그래서 팀 프로젝트에서는 어느정도 코드 구조의 자유성을 제한하여 코드 구조를 통일하는 것이 좋다고 생각하여 NestJS를 사용하게 되었다. 또 NestJS가 Spring 구조와 비슷하다고 하여 나중에 Spring을 공부할 때도 구조를 파악하는데 도움되겠다 생각하여 결정한 것도 있다.
+
+### 2. DB 는 어떤걸로..?
+
+DB는 mongoDB를 선택하였다. 우선 우리 서비스의 데이터 구조를 먼저 생각해보면 채팅 메시지 데이터가 저장될 것으로 대용량 데이터 처리에 용이한(scale-out에 편리) DB가 적합하다고 생각했다. RDBMS 보다 NoSQL을 활용하기로 하였다.
+
+NoSQL 중에 정보(튜토리얼)가 많아서 사용하기 비교적 쉽고 또 데이터를 Document 형식 관리하는 것이 우리 서비스에 적합하다고 판단하여 mongoDB를 사용하기로 결정하였다.
+
+## 마치며
+
+여기까지 프로젝트 개요에 대한 내용이다.
+
+프로젝트 하면서 어떤 고민을 하였는지는 추후 블로그 포스팅을 하도록 하겠다.
